# noob-commit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: auto-release.yml  ci.yml  dev-ci.yml  release.yml
examples/: README.md  basic_usage.rs  mock_commit.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
