[package]
license = "Apache-2.0"
edition = "2021"
version = "0.6.0"
name = "noob-commit"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["git", "commit", "ai", "automation", "cli"]
homepage = "https://github.com/arthrod/noob-commit"
repository = "https://github.com/arthrod/noob-commit"
description = "🤡 For devs who code like ninjas but commit like toddlers. Stop writing 'fix stuff' commits! How many times did you rush for a new API key or pay that shameful OpenAI bill? No more!"
authors = ["Arthur Souza Rodrigues <arthrod@umich.edu>"]

[dependencies]
rand = "0.9.0"
serde = "1.0.164"
spinners = "4.1.0"
question = "0.2.2"
schemars = "0.9.0"
serde_json = "1.0.99"
env_logger = "0.11.0"
clap-verbosity-flag = "3.0.0"
log = { version = "0.4.8", features = ["std"] }
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
async-openai = { version = "0.28.2", default-features = false, features = ["native-tls"] }

[lib]
name = "noob_commit"
path = "src/lib.rs"

[[bin]]
name = "noob-commit"
path = "src/main.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "mock_commit"
path = "examples/mock_commit.rs"
